# beanbot

./: .flake8  .gitignore  Pipfile  README.md  beanbot.py  pyproject.toml  requirements.txt
beanbot/: bot.py  db.py  formatter.py  models.py  parser.py
src/: beanbot.py
src/beanbot/: db.py  formatter.py  models.py  parser.py
src/beanbot/accounting/models/: __init__.py  extra.py  transaction.py
src/beanbot/ledger/: admin.py  apps.py  constants.py  exceptions.py  forms.py  reception.py  suggester.py  utils.py  validators.py
src/beanbot/ledger/clerks/: __init__.py  base.py  contact_keeper.py  initiator.py  registrar.py  scribe.py  suggester.py
src/beanbot/ledger/migrations/: 0001_initial.py  0002_auto_20191216_0555.py
src/beanbot/ledger/models/: extra.py  transaction.py
src/beanbot/parser/: message.py
src/beanbot/telegrambot/: beanbot.py  forms.py
src/beanbot/users/: apps.py  models.py
src/beanbot/users/migrations/: 0001_initial.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_db.py  test_formatter.py  test_parser.py
