[tool.poetry]
name = "beanbot"
version = "0.1.0"
description = "Telegram bot for Beancount"
authors = ["Kevin Zúñiga <kevin.zun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
python-telegram-bot = "^12.2.0"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
ipython = "^7.10.2"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
